# ATS-Scorer

./: .gitignore  pyproject.toml  requirements.txt
ATS/: main.py
ATS/data/: dummy.json
ATS/data/keywords/: all.py
ATS/data/verbs/: verbs.py
